--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.8",
     "apexcharts": "^3.47.0",
+    "axios": "^1.6.8",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.4.2",
     "date-fns": "^3.3.1",
